--- a/codebase/rdicidr-0.1.0/Dockerfile
+++ b/codebase/rdicidr-0.1.0/Dockerfile
@@ -1,14 +1,14 @@
 # Etapa de build
-FROM node:18 AS builder
+FROM node:15 AS builder
 
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm install --legacy-peer-deps
 COPY . .
 RUN npm run build
 
 # Etapa de producción
-FROM node:18-alpine
+FROM node:15-alpine
 
 WORKDIR /app
 COPY --from=builder /app ./
