--- a/k8/secret.yml
+++ b/k8/secret.yml
@@ -1,9 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: secret-basic-auth
-  # A bootstrap token Secret usually resides in the kube-system namespace
-  namespace: kube-system
+  name: fsl-secret
+  namespace: production
 stringData:
-  username: admin # required field for kubernetes.io/basic-auth
-  password: t0p-Secret # required field for kubernetes.io/basic-auth
+  MY_SECRET: On3H1torL3sS
