--- a/k8/deployment.yml
+++ b/k8/deployment.yml
@@ -1,21 +1,27 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  name: nginx-deployment
-  labels:
-    app: nginx
+  name: fsl-app
+  namespace: production
 spec:
+  serviceName: fsl-app
   replicas: 3
   selector:
     matchLabels:
-      app: nginx
+      app: fsl-app
   template:
     metadata:
       labels:
-        app: nginx
+        app: fsl-app
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.2
+      - name: fsl-app
+        image: <AWS_ACCOUNT_ID>.dkr.ecr.us-east-1.amazonaws.com/fsl-app:latest
         ports:
-        - containerPort: 80
+        - containerPort: 8080
+        env:
+        - name: MY_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: fsl-secret
+              key: MY_SECRET
