--- a/k8/service.yml
+++ b/k8/service.yml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ingress-wildcard-host
+  name: fsl-app-svc
+  namespace: production
 spec:
-  ports:
-  - port: 8080
-    name: web
-  clusterIP: None
   selector:
-    app: app-name
----
-apiVersion: apps/v1
-kind: StatefulSet
-## TODO: Complete the rest
+    app: fsl-app
+  ports:
+    - port: 8080
+      targetPort: 8080
+  type: ClusterIP
