--- a/k8/deployment.yml
+++ b/k8/deployment.yml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: fsl-app
     spec:
+      imagePullSecrets:
+      - name: ecr-secret
       containers:
       - name: fsl-app
         image: 289050431358.dkr.ecr.us-east-1.amazonaws.com/fsl-app:latest
