--- a/codebase/rdicidr-0.1.0/Dockerfile
+++ b/codebase/rdicidr-0.1.0/Dockerfile
@@ -1,4 +1,4 @@
-# Etapa de build
+# Stage build
 FROM node:15 AS builder
 
 WORKDIR /app
@@ -7,10 +7,14 @@ RUN npm install --legacy-peer-deps
 COPY . .
 RUN npm run build
 
-# Etapa de producción
+# Stage producción
 FROM node:15-alpine
 
 WORKDIR /app
 COPY --from=builder /app ./
+
 ENV NODE_ENV=production
+ENV PORT=8080
+
+EXPOSE 8080
 CMD ["npm", "start"]
